Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
  namespace: dkeshri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        dkeshri.io/app: orchestrator
      namespace: dkeshri
    spec:
      containers:
      - name: orchestrator
        image: dkeshri/microservice-orchestrator:latest
        resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
