Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: dkeshri
spec:
  replicas: 1
  selector:
    matchLabels:
      dkeshri.io/apigateway: apigateway
  template:
    metadata:
      labels:
        dkeshri.io/apigateway: apigateway
      namespace: dkeshri
    spec:
      containers:
      - name: apigateway
        image: dkeshri/microservice-apigateway:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  namespace: dkeshri
spec:
  selector:
    dkeshri.io/apigateway: apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
