Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/auth-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: dkeshri
spec:
  replicas: 1
  selector:
    matchLabels:
      dkeshri.io/api: auth-api
  template:
    metadata:
      labels:
        dkeshri.io/api: auth-api
      namespace: dkeshri
    spec:
      containers:
      - name: auth-api
        image: dkeshri/microservice-auth-service:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
  namespace: dkeshri
spec:
  selector:
    dkeshri.io/api: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
