Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/inventoryservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventoryservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventoryservice
  template:
    metadata:
      labels:
        app: inventoryservice
    spec:
      containers:
      - name: inventoryservice
        image: dkeshri/microservice-inventory-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventoryservice-service
spec:
  selector:
    app: inventoryservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
