Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/payment-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: dkeshri
spec:
  replicas: 1
  selector:
    matchLabels:
      dkeshri.io/api: payment-api
  template:
    metadata:
      labels:
        dkeshri.io/api: payment-api
      namespace: dkeshri
    spec:
      containers:
      - name: payment-api
        image: dkeshri/microservice-payment-service:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-service
  namespace: dkeshri
spec:
  selector:
    dkeshri.io/api: payment-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
