Backend/dotnet/Microservices/MergeAllConcept/k8s/deployments/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: dkeshri
spec:
  replicas: 1
  selector:
    matchLabels:
      dkeshri.io/message-broker: rabbitmq
  template:
    metadata:
      labels:
        dkeshri.io/message-broker: rabbitmq
      namespace: dkeshri
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: dkeshri
spec:
  selector:
    dkeshri.io/message-broker: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
